2001-06-19  Dave Camp  <dave@ximian.com>

	* scintilla-control/scintilla/ScintillaGTK.cxx
	(ScintillaGtk::size_request): Call size_request on the scrollbars.

	* scintilla-control/scintilla-editor-gutter.c: Formatting changes.

2001-05-12  Dave Camp  <dave@ximian.com>

	* scintilla-control/scintilla-control.c (scintilla_factory): Unref
	the property bag after adding it to the control.
	(scintilla_factory): Create the gutter implementation.
	(scintilla_factory): Use arrows instead of + and - for the
	folding.
	(main): Create a running context and run gtk_main_quit on its
	last_unref signal.

	* scintilla-control/scintilla/ScintillaGTK.cxx: Changed the default 
	requisition.
	
	* scintilla-control/Makefile.am (scintilla_control_SOURCES): Build
	scintilla-editor-gutter.[ch].

	* scintilla-control/scintilla-editor-gutter.[ch]: New files.

	* idl/editor-gutter.idl: New file.

	* idl/GDL.idl: Include editor-gutter.idl

	* lib/Makefile.am (libgdl_la_SOURCES): Depend on editor-gutter.idl.

2001-03-18  Dirk Vangestel  <dirk.vangestel@advalvas.be>

	* scintilla-control/scintilla-control.c (get_prop): Now returns line
	number when asked. Added an offset to the line numbers.

	* scintilla-control/scintilla-editor-buffer.c (impl_delete):
	Correcting deleting part of the text.

2001-03-14  Dirk Vangestel  <dirk.vangestel@advalvas.be>

	* scintilla-control/scintilla-editor-buffer.c (impl_get_chars):
	Corrected getting only part of the text.

2001-03-06  Dave Camp  <dave@ximian.com>

	* scintilla-control/scintilla-highlight.c (set_language_properties): 
	Slightly better default colors, and set the color for the Highlight
	Guides.

	* scintilla-control/scintilla-control.c (scintilla_factory): Connect
	to the scintilla control's "notify" signal.
	(scintilla_factory): Set all the right properties for doing code
	folding on the scintilla widget, and enable Highlight Guides.
	(expand): New function.
	(fold_changed): New function.
	(margin_click): New function.